# esm_contacts

./: pyproject.toml
esm_contacts/: main.py
notebooks/: SKFs_unsupervised_contacts.ipynb  Tir_unsupervised_contacts.ipynb
