[tool.poetry]
name = "esm_contacts"
version = "0.1.0"
description = "A sandbox to play with the ESM pLM family"
authors = ["miguelarbesu"]
license = "MIT"
packages = [
    { include = "esm_contacts" },
]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5.3"
ipykernel = "^6.15.1"
torch = { url = "https://download.pytorch.org/whl/cu115/torch-1.11.0%2Bcu115-cp38-cp38-linux_x86_64.whl" }
fair-esm = { git = "https://github.com/facebookresearch/esm.git", branch = "main" }
fairscale = "^0.4.8"
pandas = "^1.4.3"
bokeh = "^2.4.3"
networkx = "^2.8.6"
flake8 = "^5.0.4"
black = "^22.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
